<resources>
    <string name="app_name">EscapeTodayClient</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading_message">get ready for the end of the world&#8230;</string>
    <string name="the_end_of_the_world_is_nigh">the end of the world is nigh</string>
    <string name="help_title">Help</string>
    <string name="help_subheading_Using_The_App">Using The App</string>
    <string name="Using_The_App_content">
        To use the app swipe right on the Home screen\n
        \n
        Click on customise\
        \n
        Enter details
    </string>
    <string name="url_get_home">https://api.escape-today.net/</string>
    <string name="url_get_flights">https://api.escape-today.net/shit?from=%s&amp;to=sydney</string>
    <string name="menu_instruction">Swipe right to view menu</string>
    <string name="start_button">Start</string>
    <string name="start_pointer">Or click the start button</string>
</resources>
